[gd_scene load_steps=2 format=3 uid="uid://bxv8y3t2k5qmn"]

[ext_resource type="Script" path="res://scripts/ui/viewer_mode_toggle.gd" id="1_toggle"]

[node name="ViewerModeToggle" type="HBoxContainer"]
offset_right = 120.0
offset_bottom = 32.0
script = ExtResource("1_toggle")

[node name="Button2D" type="Button" parent="."]
custom_minimum_size = Vector2(50, 28)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "2D"

[node name="Button3D" type="Button" parent="."]
custom_minimum_size = Vector2(50, 28)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "3D"
